# whfb-tow-companion

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: CLAUDE.md
backend/api/: dependencies.py  main.py  vercel_stream.py
backend/llm/: client.py
backend/rag/: graph_traversal.py  pipeline.py  retriever.py  tools.py
data/graph/: load_report.json
data/markdown/: errata.md  faq.md
data/parsed/: armies.json  composition_lists.json  composition_slots.json  core_rules.json  documents.json  edges.json  errata.json  faqs.json  lores.json  magic_items.json  profiles.json  special_rules.json  spells.json  terrains.json  troop_types.json  units.json  upgrades.json  weapons.json
data/samples/: vampire-counts-sample.json
docker/: docker-compose.yml
docs/: CLAUDE.md  architecture-and-chat-review.md  demo-queries.cypher  pipeline-audit-2026-05-08.md  pipeline-audit-review-2026-05-08.md  pipeline-fix-plan-2026-05-08.md  showcase-runbook.md  warhammer_tow_domain_knowledge.md
docs/decisions/: ADR-0001-graph-database-selection.md  ADR-0002-crawler-architecture.md  (+7 more)
frontend/: .cta.json  .gitignore  CLAUDE.md  README.md  app.py  architecture-and-chat-review.md  biome.json  components.json  knip.config.ts  lighthouserc.json  package.json  playwright.config.ts  pnpm-lock.yaml  showcase-plan.md  tsconfig.json  vite.config.ts  vitest.config.ts
notebooks/: 01_explore_wiki.ipynb
pipeline/: CLAUDE.md  constants.py  run_pipeline.py
tests/: CLAUDE.md
(+3383 files in other folders)
