[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whfb-tow-companion"
version = "0.1.0"
description = "Conversational assistant for Warhammer: The Old World using GraphRAG"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Scraping
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Embeddings & vector store
    "sentence-transformers>=3.0.0",
    # Graph database
    "neo4j>=5.20.0",
    "neo4j-graphrag>=1.0.0",
    # LLM & orchestration
    "langchain-core>=1.0,<2.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    # Backend API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    # Frontend
    "streamlit>=1.35.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "tenacity>=8.3.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "testcontainers[neo4j]>=4.0",
    "langchain-ollama>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "backend", "frontend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
